<resources>
    <string name="app_name">Smart Messages</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_copy">Copy</string>
    <string name="action_star_sms">Star SMS</string>
    <string name="title_activity_thread">ThreadActivity</string>
    <string name="title_activity_new_thread">New Conversation</string>
    <string name="title_activity_test_main">TestMainActivity</string>

    <string name="title_contextual_thread">Select</string>
    <string name="hash">#</string>
    <string name="send_to">Send to</string>

    <string name="txt_thread__deleted">Deleted!</string>
    <string name="txt_thread__starred">SMS Saved</string>
    <string name="txt_thread__copied">Copied</string>

    <string name="notif_default_app_title">Set App as Default</string>
    <string name="notif_default_app_desc">Setting app default helps Smart Messages to handle SMS smarter</string>
    <string name="thread_hint__send_message">Send Message..</string>
    <string name="hint_thread__send">Say Hi...</string>
    <string name="desc_dp">display picture</string>
    <string name="title_thread__show_contact">Show Contact</string>

    <string name="format_thread__datetime">d MMM, h:mm a</string>
    <string name="text_placeholder__contact_permission">Sorry. It seems you have not given us permission to Read your Contact</string>
    <string name="text_placeholder__inbox_permission">Sorry. It seems you have not given us permission to Read your SMS</string>
    <string name="text_placeholder__permission_btn">Give Permission</string>
    <string name="desc_placeholder__content_desc">Placeholder Image</string>
    <string name="hint_newthread__searchcontacts">TO</string>
    <string name="title_activity_test2_acitvity">Test2Acitvity</string>

    <string name="label_reply">Reply</string>
    <string name="notif_content_sent">SMS Sent</string>
    <string name="notif_sending_failed">Sending Failed</string>
    <string name="hint_search">Search</string>
    <string name="search_hint">Search</string>
    <string name="hint_strred_sms">Starred SMS</string>
    <string name="label_reply_not_supported">Sender does not support reply</string>
    <string name="title_activity_starred_sms">Starred SMS</string>
    <string name="label_undo">Undo</string>
    <string name="label_unread_only">Unread Only</string>
    <string name="text_conversations">conversations</string>
    <string name="text_conversation">conversation</string>
    <string name="label_no_such_conv">No Such Conversations</string>
    <string name="action_mark_read">Mark Read</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="title_app_default">App Default</string>
    <string name="title_sms_perm">SMS</string>
    <string name="title_contact_perm">Contact</string>
    <string name="body_app_default">Making app default makes Smart Messages handle messages better</string>
    <string name="body_sms_perm">Need to Access SMS </string>
    <string name="body_contact_perm">Need to Access contracts otherwise won\'t be able to show Names</string>


    <string name="sample_image">Sample Image</string>
    <string name="lbl_grant">Grant</string>
    <string name="lbl_deny">Deny</string>
    <string name="txt_perm_sms_contact"><![CDATA[I need <b>SMS</b> and <b>Contact</b> permission to perform better.]]></string>
    <string name="txt_perm_contact"><![CDATA[I need <b>Contact</b> permission to show you contact names.]]></string>
    <string name="txt_perm_sms"><![CDATA[I need <b>SMS</b> permission to read SMS.]]></string>

    <string name="label_next">Next</string>
    <string name="lbl_skip">Skip</string>
    <string name="text_preparing">Preparing your box...</string>
    <string name="err_unknown_sending">Some Unknown error while sending :(</string>
    <string name="txt_sms_sent">SMS Sent</string>
    <string name="err_generic_failure">Generic Failure</string>
    <string name="err_no_service">No Service</string>
    <string name="err_radio_off">Radio is Off</string>
    <string name="err_null_pdu">Null PDU</string>
    <string name="err_delivery_cancelled">Delivery Cancelled</string>
    <string name="txt_delivered">SMS Delivered</string>
    <string name="err_unknown_delivery">Unknown Error while Delivering</string>
    <string name="txt_home">Home</string>
    <string name="txt_mobile">Mobile</string>
    <string name="txt_work">Work</string>
    <string name="txt_home_fax">Home Fax</string>
    <string name="txt_work_fax">Work Fax</string>
    <string name="txt_main">Main</string>
    <string name="deleted">Deleted</string>
    <string name="txt_ok">OK</string>
    <string name="title_activity_settings">Settings</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>


    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="label_settings">Settings</string>
    <string name="label_refresh">Refresh</string>
    <string name="pref_key_enable_blocker">enable_blocker</string>
    <string name="pref_key_blocked_contacts">blocked_contacts</string>
    <string name="pref_key_muted_contacts">muted_contacts</string>
    <string name="pref_key_outgoing_msg_sound">outgoing_msg_sound</string>
    <string name="label_outgoing_msg_sound">Outgoing Message Sound</string>
    <string name="pref_key_notif_alert">notification_alert</string>
    <string name="pref_key_notif_sound">notification_sound</string>
    <string name="pref_key_notif_vibrate">notification_vibrate</string>
    <string name="pref_notif_alert">Notification Alert</string>


    <!-- Preference Test Starts-->

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="default_gallery_storage">My Videos</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="app_version">3.5</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="label_call">Call</string>
    <string name="lbl_translate">Translate</string>
    <string name="lbl_failed">Failed</string>

    <!-- Preference Test Ends-->

</resources>