<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="dev.sagar.smsblocker.ux.activities.HomeActivity">

    <item android:id="@+id/menu_search"
        android:title="@string/hint_search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item android:id="@+id/menu_starred_sms"
        android:title="@string/hint_strred_sms"
        app:showAsAction="never" />

    <item android:id="@+id/menu_referesh"
        android:title="@string/label_refresh"
        app:showAsAction="never" />

    <item android:id="@+id/menu_settings"
        android:title="@string/label_settings"
        app:showAsAction="never" />


</menu>
