<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="Notification">

        <SwitchPreference
            android:id="@+id/pref_outgoing_msg_sound"
            android:title="@string/label_outgoing_msg_sound"
            android:key="@string/pref_key_outgoing_msg_sound"/>

        <MultiSelectListPreference
            android:title="@string/pref_notif_alert"
            android:summary="Personal, Transactional, Promotional... "
            android:key="@string/pref_key_notif_alert"
            android:entries="@array/pref_notif_category_entries"
            android:entryValues="@array/pref_notif_category_values" />

        <MultiSelectListPreference
            android:title="Notification Sounds"
            android:summary="Personal, Transactional, Promotional... "
            android:key="@string/pref_key_notif_sound"
            android:entries="@array/pref_notif_category_entries"
            android:entryValues="@array/pref_notif_category_values"/>

        <MultiSelectListPreference
            android:title="Notification Vibrate"
            android:summary="Personal, Transactional, Promotional... "
            android:key="@string/pref_key_notif_vibrate"
            android:entries="@array/pref_notif_category_entries"
            android:entryValues="@array/pref_notif_category_values"/>

    </PreferenceCategory>


    <PreferenceCategory
        android:title="Blocking">

        <SwitchPreference
            android:id="@+id/pref_enable_blocker"
            android:title="Enable Blocker"
            android:key="@string/pref_key_enable_blocker"/>

        <MultiSelectListPreference
            android:title="Blocked Contacts"
            android:key="@string/pref_key_blocked_contacts" />

        <MultiSelectListPreference
            android:title="Muted Contacts"
            android:key="@string/pref_key_muted_contacts" />

    </PreferenceCategory>

    <!--<PreferenceCategory android:title="General">
        <EditTextPreference
            android:defaultValue="@string/default_gallery_storage"
            android:key="@string/key_gallery_name"
            android:summary="@string/default_gallery_storage"
            android:title="@string/title_gallery_storage" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/key_upload_over_wifi"
            android:summary="@string/summary_upload_over_wifi"
            android:title="@string/title_auto_upload" />

        <ListPreference
            android:defaultValue="3"
            android:dialogTitle="@string/title_upload_quality"
            android:entries="@array/pref_upload_quality_entries"
            android:entryValues="@array/pref_upload_quality_values"
            android:key="@string/key_upload_quality"
            android:summary="@string/summary_upload_video_quality"
            android:title="@string/title_upload_quality" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_title_notifications">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/notifications_new_message"
            android:title="@string/title_new_notification_sound" />

        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="notifications_new_message"
            android:key="@string/key_notifications_new_message_ringtone"
            android:ringtoneType="notification"
            android:summary="@string/summary_choose_ringtone"
            android:title="@string/pref_title_ringtone" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_vibrate"
            android:summary="@string/summary_vibrate"
            android:title="@string/title_vibrate" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_about">

        <Preference
            android:selectable="false"
            android:summary="@string/summary_about" />

        <Preference
            android:summary="@string/app_version"
            android:title="@string/title_version" />

        <Preference
            android:key="@string/key_send_feedback"
            android:summary="@string/summary_support"
            android:title="@string/title_send_feedback" />

        &lt;!&ndash; preference opens url in browser &ndash;&gt;
        <Preference
            android:summary="@string/summary_faq"
            android:title="@string/title_faq">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_faq" />
        </Preference>

        <Preference android:title="@string/privacy_policy">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_privacy" />
        </Preference>

        <Preference android:title="@string/title_terms">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_terms" />
        </Preference>
    </PreferenceCategory>-->

</PreferenceScreen>