<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:id="@+id/holder_placeholder"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_placeholder"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/desc_placeholder__content_desc"
        android:src="@drawable/placeholder_permission" />
    <TextView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_placeholder"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:paddingTop="3dp"
        android:paddingBottom="10dp"
        android:textSize="16sp"
        android:alpha="0.82"
        android:text="@string/text_placeholder__contact_permission"
        android:id="@+id/tv_placeholder"/>
    <Button
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_placeholder"
        android:layout_centerHorizontal="true"
        android:text="@string/text_placeholder__permission_btn"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="#00B8D4"
        android:id="@+id/btn_placeholder"/>
</RelativeLayout>