<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkg_intro__grad_cirular"
    tools:context="dev.sagar.smsblocker.ux.activities.IntroActivity"
    tools:layout_editor_absoluteY="81dp">

    <android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintBottom_toTopOf="@id/ll_holder"
        android:id="@+id/vp_holder"/>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/ll_holder">
        <!--<Button
            android:id="@+id/btn_skip"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="8dp"
            android:background="@color/transparent"
            android:text="@string/lbl_skip"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:padding="20dp"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_navigate_next_white_24dp" />-->

        <Button
            android:id="@+id/btn_next"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="8dp"
            android:background="@color/transparent"
            android:text="@string/label_next"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:padding="20dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_navigate_next_white_24dp" />
    </RelativeLayout>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/sample_image"
        android:scaleType="centerInside"
        android:src="@drawable/ic_notif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/vp_holder"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/ll_holder"
        android:id="@+id/loading_view_holder">

        <android.support.v7.widget.CardView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:rotationX="45"
            android:layout_centerInParent="true"
            android:background="@color/white"
            android:alpha="0.5"
            android:id="@+id/card"/>
        <com.mingle.widget.LoadingView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_above="@id/card"
            android:id="@+id/loading_view"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/text_preparing"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:padding="12dp"
            android:textSize="16sp"
            android:layout_below="@id/card"/>
    </RelativeLayout>



</android.support.constraint.ConstraintLayout>
