<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="dev.sagar.smsblocker.ux.activities.HomeActivity"
    tools:showIn="@layout/activity_home">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/holder_main">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/holder_switch"
            android:visibility="gone"
            android:background="@color/background_primary">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="10dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:gravity="center_vertical"
                android:textSize="12sp"
                android:layout_centerInParent="true"
                android:textColor="@color/blueA800"
                android:layout_alignParentStart="true"
                android:id="@+id/tv_total_count"/>

            <ProgressBar
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/progress_bar"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="0dp"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:indeterminateOnly="true" />

            <android.support.v7.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:drawablePadding="4dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="12sp"
                android:textColor="@color/blueA800"
                app:switchPadding="10dp"
                android:layout_toStartOf="@+id/progress_bar"
                android:fontFamily="serif"
                android:text="@string/label_unread_only"
                android:layout_alignParentEnd="true"
                android:id="@+id/switch_unread"/>

        </RelativeLayout>

        <android.support.v4.widget.SwipeRefreshLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/swipe_refresh_layout"
            android:layout_below="@id/holder_switch">

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginTop="0dp"
                android:id="@+id/lv_threads"/>
        </android.support.v4.widget.SwipeRefreshLayout>

        <dev.sagar.smsblocker.ux.customviews.NotificationView
            android:id="@+id/notificationView"
            android:background="@drawable/grad"
            android:alpha="0.85"
            android:padding="8dp"
            app:titleText="@string/notif_default_app_title"
            app:descText="@string/notif_default_app_desc"
            app:titleColor="@color/white"
            app:descColor="@color/white"
            android:visibility="gone"
            app:closeBtnBackground="@drawable/ripple_effect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <include layout="@layout/placeholder_permission"
            android:visibility="gone"/>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/holder_loader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <com.mingle.widget.LoadingView
            android:id="@+id/loading_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>

</RelativeLayout>
